--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>fr.almamy</groupId>
     <artifactId>todo-list</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
