--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,19 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            <plugin>
+                <!-- Cargo -->
+                <!-- https://mvnrepository.com/artifact/org.codehaus.cargo/cargo-maven3-plugin -->
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven3-plugin</artifactId>
+                <version>1.9.4</version>
+                <configuration>
+                    <container>
+                        <containerId>tomcat10x</containerId>
+                        <type>embedded</type>
+                    </container>
+                </configuration>
+        </plugin>
         </plugins>
     </build>
 
