--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <logback.version>1.2.3</logback.version>
         <javax.version>1.3.2</javax.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
+        <servlet-api.version>4.0.1</servlet-api.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,15 @@
             <artifactId>javax.annotation-api</artifactId>
             <version>${javax.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
