--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <javax.version>1.3.2</javax.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <servlet-api.version>4.0.1</servlet-api.version>
+        <jstl.version>1.2</jstl.version>
     </properties>
 
     <dependencies>
@@ -61,6 +62,13 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
         </dependency>
 
     </dependencies>
